[FIX] account_reports: carry over css
In this commit, we made a few fixes on the carry over:

- the tooltip was not aligned in the middle and was too far to the right.

- the button for viewing the carry over lines in the popover had no css classes.

- When clicking the button, the popover didn't close and stayed on the new page.

closes odoo/enterprise#49938

Task: 3438422
X-original-commit: 5f585dea0762f77b12db9ca397ebea61d5d8e19f

--- a/account_reports/static/src/components/account_report/account_report.scss
+++ b/account_reports/static/src/components/account_report/account_report.scss
@@ -146,6 +146,7 @@
     .line_cell {
         > .wrapper {
             display: flex;
+            align-items: center;
 
             > .content { display: flex }
         }
